# airswap-stats

server/: .gitignore  Cargo.toml  Shuttle.toml  config.json  justfile
server/src/: abi.rs  asset.rs  config.rs  lib.rs  main.rs  pool.rs  prices_feed.rs  provider.rs  split.rs  utils.rs
server/src/prices/: binance_price_feed.rs  coingecko_price_feed.rs  mod.rs  price_feed.rs
server/src/services/: mod.rs  pools.rs  staking.rs
