[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-axum = { version = "0.12.0" }
shuttle-runtime = { version = "0.12.0" }
shuttle-secrets = "0.12"
"async-trait" = "0.1"
futures = "0.3"
axum = "0.6.2"
sync_wrapper = "0.1.1"
ethers = { version = "2", features = ["abigen"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.26.0" }
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.11"
parking_lot = "0.12"
